@@ -1,12 +1,7 @@
 {
-  "count": 36,
-  "uniques": 12,
+  "count": 30,
+  "uniques": 10,
   "clones": [
-    {
-      "timestamp": "2022-08-22T00:00:00Z",
-      "count": 6,
-      "uniques": 5
-    },
     {
       "timestamp": "2022-08-23T00:00:00Z",
       "count": 3,
