@@ -1,3 +1,11 @@
+2022-09-05T16:32:12Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994818009
+* notice: last 14d: unq all: 10 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 287 453 / 311 489
+* notice: next accum: outdated-unq outdated-all / unq all: 292 460 / 311 490
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-22] / []
+
 2022-09-05T08:27:50Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2991779017
 * notice: last 14d: unq all: 12 36
